fix: added jinja2 requirements.txt fix: moved frontend into /app folder

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metro API {{api_version}}</title>
+    <title>Metro API {{api_version}} FRONTEND IN APP</title>
     <link rel="stylesheet" href="https://lacmta.github.io/design-system/dist/css/uswds.min.css" type="text/css">
     <script src="https://lacmta.github.io/design-system/dist/js/uswds.min.js"></script>
     <script src="https://lacmta.github.io/design-system/dist/js/uswds-init.min.js"></script>
