updated frontend landing page

--- a/app/frontend/header.html
+++ b/app/frontend/header.html
@@ -3,7 +3,7 @@
       <div class="usa-navbar">
         <div class="usa-logo" id="basic-logo">
           <em class="usa-logo__text">
-            <a href="javascript:void(0)" title="&lt;Project title&gt;">
+            <a href="javascript:void(0)" title="&lt;Metro&gt;">
               Metro
             </a>
           </em>
@@ -16,48 +16,11 @@
         </button>
         <ul class="usa-nav__primary usa-accordion">
           <li class="usa-nav__primary-item">
-            <button
-              class="usa-accordion__button usa-nav__link usa-current"
-              aria-expanded="false"
-              aria-controls="basic-nav-section-one"
-            >
-              <span>Getting Started</span>
-            </button>
-          <li class="usa-nav__primary-item">
-            <button
-              class="usa-accordion__button usa-nav__link usa-current"
-              aria-expanded="false"
-              aria-controls="basic-nav-section-one"
-            >
-              <a href="/docs">API Endpoints</a>
-            </button>
-  
-            <ul id="basic-nav-section-one" class="usa-nav__submenu">
-              <li class="usa-nav__submenu-item">
-                <a href="/login"> Log in</a>
-              </li>
-              <li class="usa-nav__submenu-item">
-                <a href="#"> Sign up </a>
-              </li>
-            </ul>
+            <a href="/docs" class="usa-nav__link">
+              <span>API Endpoints</span>
+            </a>
           </li>
-  
         </ul>
-  
-        <form class="usa-search usa-search--small" role="search">
-          <label class="usa-sr-only" for="basic-search-field-en-small">
-            Search
-          </label>
-          <input
-            class="usa-input"
-            id="basic-search-field-en-small"
-            type="search"
-            name="search"
-          />
-          <button class="usa-button" type="submit">
-            <span class="usa-sr-only">Search</span>
-          </button>
-        </form>
       </nav>
     </div>
   </header>
