--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -19,14 +19,17 @@
               usa-prose usa-layout-docs
             " id="main-content">
             <h1>Metro API v{{api_version}}</h1>
-            <div class="usa-alert usa-alert--info usa-alert--slim">
-              <div class="usa-alert__body">
-                <p class="usa-alert__text">
-                  <b>Last updated: {{update_time}}</b>
-                  <span id="last_updated_label"></span>
-                </p>
+            {% if update_time != None %}
+              <div class="usa-alert usa-alert--info usa-alert--slim">
+                <div class="usa-alert__body">
+                  <p class="usa-alert__text">
+                    <b>Last updated: {{update_time}}</b>
+                    <span id="last_updated_label"></span>
+                  </p>
+                </div>
               </div>
-            </div>
+            {% endif %}
+
   
             <p class="usa-intro">
               Welcome to the Metro API.  This API currently provides access to the following data:
