fix: title of page no longer has extra text

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metro API {{api_version}} FRONTEND IN APP</title>
+    <title>Metro API {{api_version}}</title>
     <link rel="stylesheet" href="https://lacmta.github.io/design-system/dist/css/uswds.min.css" type="text/css">
 </head>
 <body>
